# VEVOR-AIO-CPU-Liquid-Cooler-Linux-Driver

./: 99-vevor-lcd.rules  LICENSE  PROTOCOL.md  README.md  setup.sh  verify.sh  vevor-lcd.service
.github/workflows/: ci.yml
rust/: Cargo.toml
rust/src/: main.rs
